# rapidcheck

./: CMakeLists.txt  README.debian
ext/: CMakeLists.txt
extras/catch/: CMakeLists.txt
